--- a/web-dev-1-html-css-javascript/project-2-ecommerce-website-fullstack/public/login.html
+++ b/web-dev-1-html-css-javascript/project-2-ecommerce-website-fullstack/public/login.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE-edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Clothing: Create account</title>
+        <title>Clothing: Log in</title>
 
         <link rel="stylesheet" href="css/signup.css">
     </head>
@@ -19,18 +19,11 @@
         <div class="container">
             <img src="img/dark-logo.png" class="logo" alt="">
             <div>
-                <input type="text" autocomplete="off" id="name" placeholder="name">
                 <input type="email" autocomplete="off" id="email" placeholder="email">
                 <input type="password" autocomplete="off" id="password" placeholder="password">
-                <input type="text" autocomplete="off" id="number" placeholder="number">
-                <input type="checkbox" checked class="checkbox" id="terms-and-cond">
-                <label for="terms-and-cond">agree to our <a href="">terms and conditions</a></label>
-                <br>
-                <input type="checkbox" class="checkbox" id="notification">
-                <label for="notification">recieve upcoming offers and events mails</a></label>
-                <button class="submit-btn">create account</button>
+                <button class="submit-btn">log in</button>
             </div>
-            <a href="/login" class="link">already have an account? Log in here</a>
+            <a href="/signup" class="link">Don't have an account? Create one!</a>
         </div>
         <script src="js/token.js"></script>
         <script src="js/form.js"></script>
